<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
 
	<groupId>org.openfuxml</groupId>
	<artifactId>ofx</artifactId>
	<version>1.3.11-SNAPSHOT</version>
    <packaging>pom</packaging>
	<name>openFuXML</name>
	<description>openFuXML</description>
	<url>https://github.com/aht-group/ofx</url>

	<modules>
		<module>bom</module>
		<module>client</module>
		<module>doc</module>
		<module>interfaces</module>
		<module>jsf</module>
		<module>core</module>
		<module>wiki</module>
		<module>xml</module>
		<module>util</module>
	</modules>

	<properties>
		<my.build.directory>target</my.build.directory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    	<maven.ignore>file://${basedir}/../doc/src/main/resources/ofx/maven/maven-versions.xml</maven.ignore>
	</properties>

	<prerequisites>
		<maven>3.1</maven>
	</prerequisites>

	<licenses>
		<license>
			<name>GNU General Public License</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<scm>
		<url>https://github.com/aht-group/ofx.git</url>
		<connection>scm:git:ssh://git@github.com/aht-group/ofx.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/aht-group/ofx.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	
	<developers>
		<developer>
			<id>1</id>
			<name>Thorsten Kisner</name>
			<email>t.kisner@web.de</email>
		</developer>
	</developers>
	
	<issueManagement>
	</issueManagement>

	<dependencyManagement>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5</version>
                     <configuration>
                          <useReleaseProfile>false</useReleaseProfile>
                          <releaseProfiles>release</releaseProfiles>
                          <goals>deploy</goals>
                     </configuration>
                </plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.3</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
				<plugin>
					<groupId>net.sf.exlp</groupId>
					<artifactId>exlp-maven</artifactId>
					<version>0.1.15-SNAPSHOT</version>
				</plugin>
				<plugin>
			        <groupId>org.codehaus.mojo</groupId>
			        <artifactId>versions-maven-plugin</artifactId>
			        <version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
		        	<artifactId>maven-pmd-plugin</artifactId>
		        	<version>3.6</version>
		        	<configuration>
			        	<linkXRef>false</linkXRef>
			        </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<version>2.3.2</version>
				<configuration>	<!-- Testing with 10 -->
					<source>8</source>
					<target>8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<repositories>
		<repository>
			<id>sonatype.snapshot</id>
			<name>Sonatype Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<!--Aspose for WordRendering -->
			<id>AsposeJavaAPI</id>
			<name>Aspose Java API</name>
			<url>https://repository.aspose.com/repo/</url>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>sonatype.snapshot</id>
			<name>Sonatype Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	
	<profiles>
    	<profile>
       		<id>ram</id>
       		<build>
       			<directory>${my.build.directory}</directory>
       		</build>
   		</profile>
   		<profile>
			<id>only-eclipse</id>
			<activation><property><name>m2e.version</name></property></activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
			      						<pluginExecution>
			      							<pluginExecutionFilter>
			      								<groupId>org.jvnet.jaxb2.maven2</groupId>
			                					<artifactId>maven-jaxb2-plugin</artifactId>
			      								<versionRange>[0.1.10,)</versionRange>
			      								<goals><goal>generate</goal></goals>
			      							</pluginExecutionFilter>
			      							<action><ignore /></action>
			      						</pluginExecution>
			      						<pluginExecution>
		                					<pluginExecutionFilter>
		                  						<groupId>org.apache.maven.plugins</groupId>
		                  						<artifactId>maven-enforcer-plugin</artifactId>
		                  						<versionRange>[1.0.0,)</versionRange>
		                  						<goals><goal>enforce</goal></goals>
		                					</pluginExecutionFilter>
		                					<action><ignore /></action>
		              					</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
       		<id>release</id>
       		<build>
       			<directory>${my.build.directory}</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals><goal>jar-no-fork</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals><goal>jar</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals><goal>sign</goal></goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>